syntax = "proto3";

package api;
option go_package = "./server/api";

service MyService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
